[package]
name = "chat-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
# futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio"] }
iced_aw = "0.12.2"
log = "0.4.27"
miette = { version = "7.5.0", features = ["fancy"] }
minechat-protocol = { path = "../protocol" }
kyori-component-json = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = "1.16.0"
